Potential fix for stuck tooltips

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -145,4 +145,8 @@ strong {
 
 .options {
 	text-align: right;
+
+	a {
+		-webkit-user-select: none; /* Safari 3.1+ */ -moz-user-select: none; /* Firefox 2+ */ -ms-user-select: none; /* IE 10+ */ user-select: none; /* Standard syntax */ user-drag: none; -webkit-user-drag: none;
+	}
 }
